# VideoForge-Native

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_ALIGNMENT_AUDIT.md  ARCHITECTURE_GUIDE.md  ARCHITECTURE_OPERATIONAL_GUIDE.md  CLAUDE.md  DATAFLOW.md  HANDOFF.md  MODULE_MAP.md  PERFORMANCE_AUDIT.md  README.md  REFACTOR_OR_MIGRATION_PLAN.md  SMOKE_TEST.md  VIDEO_UPSCALER_AUDIT.md  VIDEO_UPSCALER_BENCHMARK_PLAN.md  VIDEO_UPSCALER_PATCH_PLAN.md  engine_audit.md  implementation_plan.md  package-lock.json  package.json  requirements.txt  run.bat  run_latest_runscope_ingest.bat  run_native_engine.bat  run_native_engine_debug.bat  smi.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
VideoForgeV1.0/: .gitignore  TECHNICAL_AUDIT_v1.md  requirements.txt  tsconfig.json
VideoForgeV1.0/python/: auto_grade_analysis.py  blender_engine.py  model_manager.py  research_layer.py
VideoForgeV1.0/src-tauri/: Cargo.toml  tauri.conf.json
VideoForgeV1.0/src-tauri/capabilities/: default.json
VideoForgeV1.0/src-tauri/src/: control.rs  edit_config.rs  main.rs  models.rs  spatial_map.rs  spatial_publisher.rs
VideoForgeV1.0/ui/: package.json
VideoForgeV1.0/ui/src/Store/: useJobStore.tsx
docs/: ARCHITECTURE_OPERATIONAL_GUIDE.md  CI_GPU_STABILIZATION_CHECKLIST.md  CODEBASE.md  Development-plan-sections.md  FIRST_RUN_EXPERIENCE.md  HANDOFF.md  HANDOFF_2026-02-28.md  Internal Audit & Technical Documentation.md  NATIVE_ENGINE_MVP.md  Native Engine Transformer Support plan.md  PLAYBACK_SYNC_CONTRACT.md  README.md  RELEASE_SIGNOFF.md  SHM_PROTOCOL.md  SMOKE_TESTS.md  That sounds like a solid choice. Given the pace of  Tiled Inference Root Cause & Fix.md  UX_LAWS.md  V1_RELEASE_CHECKLIST.md  VIDEOFORGE_2_WEEK_EXECUTION_PLAN.md  VideoForge v1.0 – Technical Documentation & Audit.md  WINDOWS_RAVE_RUNTIME.md  architecture_status_truth.md  bench.md  capability_matrix.md  devBuildSetup.md  engine_audit.md  handoff_cleanup_followup_status_2026-03-13.md  handoff_native_direct_glitch_followup_2026-03-13.md  ipc_v1.md  metrics_trust.md  native_engine_handoff_2026-03-06.md  native_engine_handoff_2026-03-07.md  native_engine_implementation_plan.md  native_engine_optimization_audit.md  native_engine_remaining_wins_implementation_plan_2026-03-06.md  next_phase_direction_2026-03-13.md  product_engineering_roadmap_2026-03-13.md  release_hygiene_checklist.md  runtime_path_contracts.md  (+3 more)
docs/archive/: README.md  SMOKE_TESTS.md  engine_audit.mddone  implementation_plan.md  native_engine_implementation_plan.md  native_engine_remaining_wins_implementation_plan_2026-03-06.md  native_engine_workspace_audit_2026-03-06.md  post_cleanup_followup_plan_2026-03-13.md  runtime_truth_execution_plan_2026-03-08.md  tcxt.md  video_upscaler_benchmark_plan_2026-03-07.md  video_upscaler_patch_plan_2026-03-07.md
docs/audits/: video_upscaler_audit_2026-03-07.md
docs/logs/: native_perf_stability_5x_2026-03-06.json
docs/plans/: codebase_cleanup_plan_2026-03-13.md  post_cleanup_followup_plan_2026-03-13.md
engine-v2/: Cargo.toml  build.rs  engine_v2_layout.txt
engine-v2/src/backends/: tensorrt.rs
engine-v2/src/codecs/: nvdec.rs  nvenc.rs  nvenc_bindings_generated.rs  sys.rs
engine-v2/src/core/: backend.rs  context.rs  kernels.rs  types.rs
engine-v2/src/engine/: inference.rs  pipeline.rs
ipc/: protocol.schema.json  shm_protocol.json
python/: arch_wrappers.py  cuda_streams.py  event_sync.py  inference_engine.py  ipc_protocol.py  load_model.py  logging_setup.py  model_manager.py  pyproject.toml  realesrgan_worker.py  research_layer.py  shm_ring.py  shm_worker.py  sr_settings_node.py  upscale_engine.py  watchdog.py
python/architectures/: __init__.py  edsr.py  rcan.py  realesrgan.py
python/bench/: frame_loop_bench.py
python/loaders/: __init__.py  official_stubs.py  onnx_loader.py  spandrel_loader.py  swin2sr_loader.py
python/tests/: test_batch_inference.py  test_bench_script.py  test_cuda_streams.py  test_event_sync.py  test_ipc_protocol.py  test_logging_setup.py  test_prealloc.py  test_shm_ring_size.py  test_worker_help.py
rust_video_upscaler/: Cargo.toml
rust_video_upscaler/src/: lib blah  main.rs  python_bridge.rs
scripts/: convert_fp16.py  print_latest_runscope_ingest.ps1
src-tauri/: Cargo.toml  build.rs  build_out.txt  tauri.conf.json
src-tauri/src/: control.rs  edit_config.rs  ffmpeg_accessors.c  inference.rs  lib.rs  main.rs  models.rs  native_ffmpeg_sys.rs  python_env.rs  rave_cli.rs  request_handler.rs  run_manifest.rs  runtime_truth.rs  shm.rs  shm_ring.rs  spatial_map.rs  spatial_publisher.rs  tauri_contracts.rs  utils.rs  video.rs  video_pipeline.rs  win_events.rs
src-tauri/src/commands/: engine.rs  export.rs  mod.rs  native_direct_pipeline.rs  native_engine.rs  native_probe.rs  native_routing.rs  native_runtime.rs  native_streaming_io.rs  native_tooling.rs  rave.rs  upscale.rs
src-tauri/src/ipc/: mod.rs  protocol.rs
tools/: export_onnx.py  smoke.ps1
tools/bench/: run_bench.ps1
tools/ci/: calibrate_rave_gpu_baseline.ps1  check_deps.ps1  check_docs.ps1  check_native_smoke_perf.ps1  check_rave_benchmark_thresholds.ps1  check_rave_json_contract.ps1  rave_benchmark_baseline.windows-gpu.json  run_release_signoff_windows.ps1  update_rave_benchmark_baseline.ps1
tools/nvenc-bindgen/: Cargo.toml
tools/nvenc-bindgen/src/: main.rs
ui/: build_output.txt  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  env.d.ts  index.tsx  types.ts  video_pipeline.rs
ui/src/Store/: useJobStore.tsx  viewLayoutStore.ts
ui/src/components/: AIUpscaleNode.tsx  CropOverlay.tsx  EmptyState.tsx  InputOutputPanel.tsx  JobsPanel.tsx  LogsPanel.tsx  PanelErrorBoundary.tsx  PanelHeader.tsx  PreviewPanel.tsx  SignalSummary.tsx  SpatialMapOverlay.tsx  StatusFooter.tsx  Timeline.tsx  TitleBar.tsx  ToggleGroup.tsx  VideoEngine.tsx  ViewMenu.tsx
ui/src/hooks/: useRaveIntegration.ts  useTauriEvents.ts  useUpscaleJob.ts  useVideoState.ts
ui/src/tauri/: contracts.ts
ui/src/utils/: jobState.ts  modelClassification.ts  modelRuntime.ts
weights/: .gitignore
(+36 files in other folders)
