[package]
name = "visual_enhancement_engine"
version = "0.1.0"
edition = "2021"

# Remove the lib section since you don't need `lib.rs` anymore
# [lib]
# path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"
image = "0.24"
tokio = { version = "1", features = ["full"] }  # For async support
tracing = "0.1"  # For logging
tracing_subscriber = "0.3"  # For tracing subscriber

