[package]
name = "videoforge"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
default-run = "videoforge"

# --- THIS SECTION IS CRITICAL FOR "app_lib" ERROR ---
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
# ----------------------------------------------------

[build-dependencies]
serde_json = "1.0"
tauri-build = { version = "2.0.0", features = [] }

[features]
# Enable the GPU-native engine-v2 upscaling path.
# Requires CUDA toolkit, TensorRT, and ONNX Runtime with TensorRT EP.
# The Python pipeline remains the default when this feature is off.
#
# Requires CUDA toolkit, TensorRT, and ONNX Runtime with TensorRT EP.
# ort pinned to =2.0.0-rc.11 (latest rc on crates.io as of 2026-02).
native_engine = ["dep:videoforge-engine"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
anyhow = "1.0"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
zenoh = "1.0.2"
memmap2 = "0.9"

# Installer / Download Dependencies
reqwest = { version = "0.11", features = ["stream", "rustls-tls"] }
futures-util = "0.3"
zip = "0.6"
dirs = "5.0"
sysinfo = "0.30"
lazy_static = "1.4"
opener = "0.7"
thiserror = "1.0"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Native engine (optional — enabled by native_engine feature).
videoforge-engine = { path = "../engine-v2", optional = true }
